@@ -1,7 +1,7 @@
 ﻿[Updates]
 CurrentRelease = v0.4.0.0
-ReleaseDate = 2023-03-29 13:00:00.935223
-LastCheckDate = 2023-03-29 13:00:00.935223
+ReleaseDate = 2023-03-29 13:11:50.261011
+LastCheckDate = 2023-03-29 13:11:50.261011
 DisableUpdateCheck = 0
 PauseDays = 0
 
